# qingqiu-system

./: .gitignore  AGENTS.md  ARCH.md  CHANGELOG.md  DESIGN.md  IMPLEMENTATION-PLAN.md  NON-FUNCTIONAL.md  PRD-v0.1-archived.md  PRD.md  PROJECT.md  README.md  RELEASE-v1.0.md  TECH-STACK.md  VERIFICATION.md  pyproject.toml
docs/: LOCAL-USAGE.md
docs/handoffs/: 2026-07-05-day1.md  2026-07-06-day2.md  2026-07-06-day3.md  2026-07-06-day4.md  2026-07-06-day5-v2.md  2026-07-06-day5-v3.md  2026-07-06-day5.md  2026-07-06-day6-v2.md  2026-07-06-day6-v3.md  2026-07-06-day6.md
docs/slices/: S2.1_router_design.md
docs/verification/: M10_growth.log.md  M10_remaining.log.md  M3_voice.log.md  M4_im.log.md  M8_remaining.log.md  M9_ui.log.md  S1.2_llm_custom.log.md  S1.3_config.log.md  S1.4_logging.log.md  S1.5_memory.log.md  S2.1_cli.log.md  S2.2_router.log.md  S2.3_planner.log.md  S2.4_executor.log.md  S2.5_confirm_cli.log.md  S2.6_e2e.log.md  S3.3_tts.log.md  S4.4_feishu_button.log.md  S5.1_confirm.log.md  S5.2_whitelist.log.md  S5.3_blacklist.log.md  S5.4_private_detect.log.md  S5.5_sensitive.log.md  S6.5_personality.log.md  S9.1_tauri_build.log.md  S9.1_tauri_skeleton.log.md  ci-loop-2026-07-06-12-30.log.md  ci-loop-2026-07-06-13-00.log.md  ci-loop-2026-07-06-13-30.log.md  ci-loop-2026-07-06-14-00.log.md  ci-loop-2026-07-06-14-30-to-16-30.log.md  ci-loop-2026-07-06-16-30.log.md  ci-loop-2026-07-06-17-00.log.md  ci-loop-2026-07-06-17-30.log.md  ci-loop-2026-07-06-18-00.log.md  ci-loop-2026-07-06-18-30.log.md  ci-loop-2026-07-06-19-00.log.md  ci-loop-2026-07-06-19-30.log.md  ci-loop-2026-07-06-20-00.log.md  ci-loop-2026-07-06-20-30.log.md  (+13 more)
references/: README.md  components.md  naming.md  styling.md  testing.md
scripts/: demo_p0.py  demo_v1.py  verify_m10.py  verify_m10_remaining.py  verify_m3.py  verify_m4.py  verify_m8_remaining.py  verify_m9.py  verify_s1_1.sh  verify_s1_2.sh  verify_s1_3.sh  verify_s1_3_hot_reload.py  verify_s1_4.py  verify_s1_5.py  verify_s2_1.py  verify_s2_2.py  verify_s2_3.py  verify_s2_4.py  verify_s2_5.py  verify_s3_3.py  verify_s4_4.py  verify_s5_1.py  verify_s5_2.py  verify_s5_3.py  verify_s5_4.py  verify_s5_5.py  verify_s6_5.py
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/qingqiu/: __init__.py  __main__.py  cli.py  personality.py
tests/: __init__.py  test_cli.py  test_executor.py  test_memory_aggregate.py  test_memory_search.py  test_obsidian.py  test_personality.py  test_planner_dag.py  test_router.py  test_s4_4.py  test_s5_6.py  test_tts.py
tests/cli/: __init__.py  test_cli.py  test_confirm_cmd.py  test_status.py  test_task.py
tests/config/: __init__.py  test_defaults.py  test_manager.py  test_schema.py
tests/growth/: __init__.py  test_conflict.py  test_growth_config.py  test_preference.py  test_reflect.py  test_vault_feed.py  test_weekly.py
tests/im/: __init__.py  test_client.py  test_e2e.py  test_handler.py  test_integration.py  test_reply.py
tests/llm/: __init__.py  test_anthropic_provider.py  test_base.py  test_custom_provider.py  test_init.py  test_ollama_provider.py  test_openai_provider.py  test_router.py
tests/memory/: __init__.py  test_memory.py
tests/observability/: __init__.py  (+1 more)
web/: index.html
(+92 files in other folders)
