[project]
name = "qingqiu"
version = "0.3.0"
description = "清秋 · 本地优先的个人 AI 助理（基于 Hermes multi-agent 思想重塑）"
requires-python = ">=3.11"
license = { text = "Proprietary" }
authors = [{ name = "ROG" }]
keywords = ["ai", "assistant", "voice", "obsidian", "local-first", "hermes"]

# 依赖留空：S1.1 最小骨架只用 Python 标准库
# 后续切片按 IMPLEMENTATION-PLAN.md 渐进加
dependencies = []

[project.scripts]
qingqiu = "qingqiu.cli:main"

[project.urls]
Repository = "https://github.com/luo683/qingqiu-system"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/qingqiu"]
include = ["README.md"]

# --- Tool configuration ---

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "SIM"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]  # allow `assert` in tests

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_ignores = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --strict-markers"