[project]
name = "qingqiu"
version = "0.3.0"
description = "清秋 · 本地优先的个人 AI 助理（基于 Hermes multi-agent 思想重塑）"
requires-python = ">=3.11"
license = { text = "Proprietary" }
authors = [{ name = "ROG" }]
keywords = ["ai", "assistant", "voice", "obsidian", "local-first", "hermes"]

# S1.2 起加 LLM provider 依赖（S1.2 范围）
# S1.3 起加 YAML / pydantic 配置支持
dependencies = [
    "openai>=1.0",
    "anthropic>=0.30",
    "ollama>=0.2",
    "httpx>=0.25",
    "tenacity>=8.0",
    "pydantic>=2.0",
    "PyYAML>=6.0",
    "loguru>=0.7.3",
    "fastapi>=0.139.0",
]

[project.scripts]
qingqiu = "qingqiu.cli:main"

[project.urls]
Repository = "https://github.com/luo683/qingqiu-system"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/qingqiu"]

# --- Tool configuration ---

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "SIM"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]  # allow `assert` in tests
"src/qingqiu/llm/*" = ["E501"]  # long lines OK in provider SDK calls

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_ignores = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --strict-markers"
asyncio_mode = "auto"
