[package]
name = "qingqiu-desktop"
version = "0.1.0"
description = "qingqiu desktop shell (Tauri · M9 webview + tray)"
edition = "2021"
authors = ["qingqiu team"]

[lib]
name = "qingqiu_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = ["tray-icon"] }
tauri-plugin-shell = "2.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[features]
# 默认 features
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]


[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true